# syno-media-organizer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  config.example.toml
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: nas.md
.githooks/: commit-msg  pre-commit
.github/: COMMIT_CONVENTION.md
.github/workflows/: ci.yml  release.yml
docs/: packages.json
scripts/: build-spk.sh  release.sh  setup-cross.sh  sign-spk.py
spk/: INFO
spk/conf/: syno-media-organizer.toml.example
spk/scripts/: installer  start-stop-status
src/: clock_compat.rs  config.rs  date_reader.rs  error.rs  exif.rs  lib.rs  main.rs  naming.rs  no_date_cache.rs  processor.rs  watcher.rs
tests/: test_processor.rs  test_quicktime.rs  test_watcher.rs
tests/common/: mod.rs
tests/fixtures/: README.md  generator.rs  sample_iphone.mov
