[package]
name = "syno-media-organizer"
version = "0.1.5"
edition = "2021"
description = "Automatically organize photos and videos by EXIF date on Synology NAS"
license = "MIT"
repository = "https://github.com/JordanAtDown/syno-media-organizer"

[dependencies]
notify = "6"
kamadak-exif = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
rayon = "1"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
rstest = "0.18"
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
